force-app/main/objects/Project_Deliverables__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Deal_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Configured</fullName>
                </value>
                <value>
                    <fullName>Tailored</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PS_Offering__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1:1 Assessment</fullName>
                </value>
                <value>
                    <fullName>1:1 Assessment Feedback Session</fullName>
                </value>
                <value>
                    <fullName>1:1 Developmental Feedback Session</fullName>
                </value>
                <value>
                    <fullName>1:1 Development Assessment</fullName>
                </value>
                <value>
                    <fullName>360</fullName>
                </value>
                <value>
                    <fullName>360 System</fullName>
                </value>
                <value>
                    <fullName>Advisory Services</fullName>
                </value>
                <value>
                    <fullName>Aspiring Minds</fullName>
                </value>
                <value>
                    <fullName>Assessment Centre</fullName>
                </value>
                <value>
                    <fullName>Assessment For Development</fullName>
                </value>
                <value>
                    <fullName>Assessment For Selection</fullName>
                </value>
                <value>
                    <fullName>Business Impact Study</fullName>
                </value>
                <value>
                    <fullName>Business Outcome Studies</fullName>
                </value>
                <value>
                    <fullName>Business Outcome Study</fullName>
                </value>
                <value>
                    <fullName>Business Value Summary</fullName>
                </value>
                <value>
                    <fullName>CEB Enterprise Leadership Academy</fullName>
                </value>
                <value>
                    <fullName>CEB Enterprise Leadership Activation</fullName>
                </value>
                <value>
                    <fullName>CEB Enterprise Leadership Solution</fullName>
                </value>
                <value>
                    <fullName>CEB HiPo Solution</fullName>
                </value>
                <value>
                    <fullName>CEB HiPo Solution With Nomination Survey</fullName>
                </value>
                <value>
                    <fullName>Client Custom Assessment</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Competency Design</fullName>
                </value>
                <value>
                    <fullName>Competency Design / Job Analysis</fullName>
                </value>
                <value>
                    <fullName>Custom Norm</fullName>
                </value>
                <value>
                    <fullName>Custom Report</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Development Centre</fullName>
                </value>
                <value>
                    <fullName>Development Coach</fullName>
                </value>
                <value>
                    <fullName>Digital Readiness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Offering__c</fullName>
        <label>PS Offering</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outsourced Assessment</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Product Consulting</fullName>
                </value>
                <value>
                    <fullName>Solutions Consulting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Solution Analytics</fullName>
                    <isActive>false</isActive>
                    <label>Solution Analytics</label>
                </value>
                <value>
                    <fullName>Subscription Support</fullName>
                    <isActive>false</isActive>
                    <label>Subscription Support</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ProjectObject__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Project</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Project Deliverables</relationshipLabel>
        <relationshipName>Project_Deliverables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Deliverable</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>PS_Offering__c</columns>
        <columns>Deal_Type__c</columns>
        <columns>Complexity__c</columns>
        <columns>Number__c</columns>
        <columns>Additional_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PD-{0000000}</displayFormat>
        <label>Project Deliverables</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Additional_Comments_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISPICKVAL( PS_Offering__c , &apos;Other&apos;) , Additional_Comments__c ==&apos;&apos;), true, false)</errorConditionFormula>
        <errorDisplayField>Additional_Comments__c</errorDisplayField>
        <errorMessage>Additional Comments is required if PS Offering is Other.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zero_is_not_allowed</fullName>
        <active>true</active>
        <errorConditionFormula>Number__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Number__c</errorDisplayField>
        <errorMessage>Please enter value greater than Zero.</errorMessage>
    </validationRules>
</CustomObject>